fixed incorrect image tag in docs

--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@ will be invoked on value chagne.  You can specify a label and an initial value a
         { "label": "Tab 1", "color": "#e7f3fe", "content": "<p>Content for Tab 1</p>" },
         { "label": "Tab 2", "color": "#e6ffed", 
 	  "content": "&lt;sexel-button label=\"Click Me\" action=\"Home\"&gt;&lt;/sexel-button&gt;" },
-        { "label": "Tab 3", "color": "#fff3cd", "content": "<img src=\"images/sexel.png\" width=64 height=64>" }
+        { "label": "Tab 3", "color": "#fff3cd", "content": "&lt;img src=\"images/sexel.png\" width=64 height=64&gt;" }
     ]'&gt;
 &lt;/sexel-tabs&gt;
 </sexel-code>
