--- a/components.html
+++ b/components.html
@@ -637,6 +637,7 @@ display: flex;
 <style>
     /* Basic styling for the chart container */
     .chart-container {
+	background-color: var(--base-background);
         max-width: 600px;
         padding: 20px;
     }
@@ -1419,9 +1420,9 @@ Sexel.tag('sexel-header', ['logo','value'], {
 .sexel-header {
 	display: flex;
 	align-items: center;
-	background-color: #f9f9f9;
+	background-color: var(--base-body-color);
 	padding: 10px 20px;
-	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	box-shadow: var(--base-shadow);
 	width: 100%;
 	justify-content: space-between;
 }
@@ -1435,7 +1436,7 @@ Sexel.tag('sexel-header', ['logo','value'], {
 #value {
 	font-weight: bold;
 	font-size: 32px;
-	color: #333;
+	color: var(--base-text);
 }
 
 #left-content {
