--- a/components.html
+++ b/components.html
@@ -151,27 +151,27 @@ const t = Sexel.tag('sexel-address',['email','name','address'],{
         display: flex;
         flex-direction: column;
         width: 300px;
-        border: 1px solid #ccc;
+        border: var(--base-border);
         padding: 16px;
-        border-radius: 8px;
-        background-color: #f9f9f9;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        border-radius: var(--base-border-radius);
+        background-color: var(--base-background);
+        box-shadow: var(--base-shadow);
     }
 
     .sexel-auth input {
     }
 
     .sexel-auth button {
-	background-color: rgb(100,142,174);
-	color: rgb(250,250,250);
+	background-color: var(--button-background-color);
+	color: var(--button-color);
     }
 
     .sexel-auth button:hover {
-        background-color: rgb(87,101,112);
+        background-color: var(--button-hover-color);
     }
 
     .sexel-auth span {
-        color: red;
+        color: var(--color-error-background);
         display: none;
     }
 </style>
@@ -716,7 +716,8 @@ Sexel.tag('sexel-chat', ['endpoint','to', 'from'], {
 		}
 
 		downloadButton.onclick = () => {
-			const blob = new Blob([chatLog], { type: 'text/plain' })
+			console.log("Chat Log",chatHistory.textContent)
+			const blob = new Blob([chatHistory.textContent], { type: 'text/plain' })
 			const link = document.createElement('a')
 			link.href = URL.createObjectURL(blob)
 			link.download = 'chat-log.txt'
@@ -734,7 +735,7 @@ width: 100%;
 height: 400px;
 border: 1px solid #ccc;
 border-radius: 8px;
-background-color: #f9f9f9;
+background-color: var(--base-background);
 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -775,13 +776,14 @@ margin-left: 5px;
 }
 
 .upload-button:hover, .unicode-button:hover, .download-button:hover {
-background-color: rgb(87, 101, 112);
+background-color: var(--base-color-tint);
 }
 
 .unicode-grid {
 display: none;
 position: absolute;
-background-color: white;
+background-color: var(--base-background);
+color: var(--base-text);
 border: 1px solid #ccc;
 padding: 10px;
 grid-template-columns: repeat(5, 1fr);
@@ -793,12 +795,28 @@ font-size: 20px;
 cursor: pointer;
 padding: 8px;
 border: none;
-background-color: rgb(240, 240, 240);
 }
 
 .unicode-grid button:hover {
-background-color: rgb(220, 220, 220);
+background-color: var(--base-background);
+
 }
+
+.upload {
+	margin-left: 4px;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	padding-left: 10px;
+	padding-right: 10px;
+	background-color: var(--button-background-color);
+	color: var(--button-color);
+	border-radius: 4px;
+}
+
+.upload:hover {
+	background-color: var(--button-hover-color);
+}
+
 </style>
 
 <template id="sexel-chat">
@@ -807,8 +825,9 @@ background-color: rgb(220, 220, 220);
         <div class="chat-input-area">
             <textarea id="message-input" class="message-input" placeholder="Type your message..."></textarea>
             <button id="unicode-button" class="unicode-button">☺</button>
+	    <label for="upload-button" class="upload">&#x2630;</label>
             <input type="file" id="upload-button" class="upload-button" title="Upload a file" />
-            <button id="download-button" class="download-button">Download Log</button>
+            <button id="download-button" class="download-button">&#x21D3</button>
         </div>
         <div class="unicode-grid" id="unicode-grid">
             <button>☺</button>
@@ -865,14 +884,14 @@ background-color: rgb(220, 220, 220);
 <style>
     .sexel-clock {
         font-family: 'Arial', sans-serif;
-        font-size: 16px;
+        font-size: var(--base-font-larger);
         font-weight: bold;
         padding: 10px;
-        background-color: #f9f9f9;
-        border: 1px solid #ccc;
-        border-radius: 4px;
+        background-color: var(--base-background);
+        border: var(--base-border);
+        border-radius: var(--base-border-radius);
         text-align: center;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        box-shadow: var(--base-shadow);
     }
 </style>
 
@@ -979,18 +998,19 @@ background-color: rgb(220, 220, 220);
     }
 
     .sexel-table th, .sexel-table td {
-        border: 1px solid #ddd;
+        border: var(--base-border);
         padding: 8px;
         text-align: left;
     }
 
     .sexel-table th {
-        background-color: #f2f2f2;
+        background-color: var(--base-color-tint);
+	color: var(--base-inverse);
         font-weight: bold;
     }
 
     .sexel-table tr:nth-child(even) {
-        background-color: #f9f9f9;
+        background-color: var(--color-medium);
     }
 </style>
 
@@ -1040,22 +1060,25 @@ background-color: rgb(220, 220, 220);
         flex-direction: column;
         align-items: flex-start;
         margin: 10px 0;
-        font-family: 'Arial', sans-serif;
+        font-family: var(--base-font-family);
+	background-color: var(--base-background);
+        color: var(--base-text);
     }
 
     .sexel-date input {
         padding: 8px;
-        font-size: 14px;
+        font-size: var(--base-font-larger);
         margin-bottom: 10px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        border: var(--base-border);
+        border-radius: var(--base-border-radius);
+        box-shadow: var(--base-shadow);
+        color: var(--base-text);
     }
 
     .sexel-date-display {
-        font-size: 14px;
-        font-weight: bold;
-        color: #333;
+        font-size: var(--base-font-larger);
+        font-weight: bold; 
+        color: var(--base-text);
     }
 </style>
 
@@ -1963,18 +1986,18 @@ Sexel.tag('sexel-menu', ['orientation', 'items'], {
         flex-direction: column;
         width: 100%;
         max-width: 500px;
-        border: 1px solid #ccc;
-        border-radius: 8px;
-        background-color: #f1f1f1;
+        border: var(--base-border);
+        border-radius: var(--base-border-radius);
+        background-color: var(--base-background);
         padding: 10px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        font-family: 'Arial', sans-serif;
+        box-shadow: var(--base-shadow);
+        font-family: var(--base-font);
     }
 
     #progress-bar-container {
         width: 100%;
         height: 30px;
-        background-color: #ddd;
+        background-color: var(--base-text);
         border-radius: 8px;
         overflow: hidden;
         position: relative;
@@ -1982,17 +2005,17 @@ Sexel.tag('sexel-menu', ['orientation', 'items'], {
 
     #progress-bar {
         height: 100%;
-        background-color: rgb(100, 142, 174);
+        background-color: var(--base-color-tint);
         width: 0; 
         transition: width 0.8s ease-in-out;
     }
 
     #progress-label {
         margin-top: 10px;
-        font-size: 14px;
+        font-size: var(--base-font-larger);
         text-align: center;
         font-weight: bold;
-        color: #333;
+        color: var(--base-text)
     }
 </style>
 
