--- a/components.html
+++ b/components.html
@@ -17,6 +17,8 @@ const t = Sexel.tag('sexel-address',['email','name','address'],{
 }
 
 .sexel-address textarea {
+	background-color: var(--base-text);
+	color: var(--base-inverse);
 	border: var(--input-border);
 	width: 300px;
 	resize: none;
@@ -159,6 +161,8 @@ const t = Sexel.tag('sexel-address',['email','name','address'],{
     }
 
     .sexel-auth input {
+	background-color: var(--base-text);
+	color: var(--base-inverse);
     }
 
     .sexel-auth button {
@@ -1011,6 +1015,7 @@ background-color: var(--base-background);
 
     .sexel-table tr:nth-child(even) {
         background-color: var(--color-medium);
+	color: var(--base-inverse);
     }
 </style>
 
@@ -2118,18 +2123,20 @@ Sexel.tag('sexel-menu', ['orientation', 'items'], {
         align-items: center;
         margin: 10px;
         padding: 8px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        background-color: #f9f9f9;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+        border: var(--base-border);
+        border-radius: var(--base-border-radius);
+        background-color: var(--base-background);
+        box-shadow: var(--base-shadow);
     }
 
     .sexel-search input {
         flex: 1;
         padding: 8px;
-        font-size: 14px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
+        font-size: var(--base-font-larger);
+        border: var(--base-border);
+        border-radius: var(--base-border-radius);
+	background-color: var(--base-text);
+	color: var(--base-inverse);
         margin-right: 10px;
     }
 
@@ -2137,15 +2144,15 @@ Sexel.tag('sexel-menu', ['orientation', 'items'], {
         padding: 10px 15px;
         border: none;
         border-radius: 4px;
-        background-color: rgb(100, 142, 174);
-        color: white;
-        font-size: 16px;
+        background-color: var(--button-background-color);
+        color: var(--button-color);
+        font-size: var(--button-font-size);
         cursor: pointer;
-        font-weight: bold;
+        font-weight: var(--button-font-weight);
     }
 
     .sexel-search button:hover {
-        background-color: rgb(87, 101, 112);
+        background-color: var(--button-hover-color);
     }
 </style>
 
@@ -2523,8 +2530,8 @@ Sexel.tag('sexel-sidebar', ['position'], {
     .spinner {
         width: 40px;
         height: 40px;
-        border: 4px solid rgba(0, 0, 0, 0.1);  /* Light border */
-        border-top: 4px solid rgb(100, 142, 174);  /* Darker top border */
+        border: 4px solid var(--base-color);  /* Light border */
+        border-top: 4px solid var(--base-color-tint);  /* Darker top border */
         border-radius: 50%;  /* Make the shape circular */
         animation: spin 1s linear infinite;  /* Spin animation */
         display: none;  /* Initially hidden */
@@ -2595,36 +2602,35 @@ Sexel.tag('sexel-sidebar', ['position'], {
     .tabs-container {
         display: flex;
         border-bottom: 2px solid #ccc;
-        margin-bottom: 10px;
     }
 
     .tab-button {
         padding: 10px 40px;
         border: none;
         cursor: pointer;
-        font-family: 'Arial', sans-serif;
-        font-size: 16px;
+        font-family: var(--base-font-family);
+        font-size: var(--base-font-larger);
         border-radius: 4px 4px 0 0;
         margin-right: 10px;
         outline: none;
-	color: rgb(64,64,64);
+	color: var(--color-medium);
     }
 
     .tab-button.active {
         font-weight: bold;
-        border-bottom: 2px solid white;
+        border-bottom: var(--base-border);
     }
 
     .tab-button:hover {
-        background-color: #f0f0f0;
+        background-color: var(--button-hover-color);
     }
 
     .content-container {
         padding: 20px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        background-color: #fff;
+        border: var(--base-border);
+        border-radius: var(--base-border-radius);
+        box-shadow: var(--base-shadow)
+        background-color: var(--base-background);
     }
 </style>
 
@@ -2771,12 +2777,12 @@ Sexel.tag('sexel-sidebar', ['position'], {
         display: flex;
         flex-direction: column;
         width: 300px;
-        border: 1px solid #ccc;
+        border: var(--base-border);
         padding: 16px;
-        border-radius: 8px;
-        background-color: #f9f9f9;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        font-family: 'Arial', sans-serif;
+        border-radius: var(--base-border-radius);
+        background-color: var(--base-background);
+        box-shadow: var(--base-shadow);
+        font-family: var(--base-font-family);
     }
 
     .sexel-upload input {
@@ -2784,18 +2790,18 @@ Sexel.tag('sexel-sidebar', ['position'], {
     }
 
     .sexel-upload label {
-        background-color: rgb(100, 142, 174);
-        color: rgb(250, 250, 250);
+        background-color: var(--button-background-color);
+        color: var(--button-color);
         padding: 10px;
         text-align: center;
-        border-radius: 4px;
+        border-radius: var(--base-border-radius);
         cursor: pointer;
-        font-size: 16px;
+        font-size: var(--base-font-larger);
         font-weight: bold;
     }
 
     .sexel-upload label:hover {
-        background-color: rgb(87, 101, 112);
+        background-color: var(--button-hover-color);
     }
 
     .sexel-upload ul {
