fixing hover typo

--- a/components.html
+++ b/components.html
@@ -2792,7 +2792,7 @@ Sexel.tag('sexel-sidebar', ['position'], {
     }
 
     .sexel-upload label:hover {
-        background-color: var(--button-hover-colo-r);
+        background-color: var(--button-hover-color);
     }
 
     .sexel-upload ul {
