--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ current list available on this page are:
 <li><a href="#a_color">color</a></li>
 <li><a href="#a_data">data table</a></li>  
 <li><a href="#a_date">date</a></li>  
-<li><a href="#a_dialog" onclick='fsm("displayDialog")'>dialog</a></li>
+<li><a href="#a_dialog" onclick='_("displayDialog")'>dialog</a></li>
 <li><a href="#a_footer">footer</a></li>  
 <li><a href="#a_form">form</a></li>
 <li><a href="#a_grid">grid</a></li>
